src/objects/Task_History__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Effective</fullName>
                </value>
                <value>
                    <fullName>Completed Non-Effective</fullName>
                </value>
                <value>
                    <fullName>Redial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Source__c</fullName>
        <label>Task Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <formula>IF(Task_Id__c != NULL, HYPERLINK(&quot;/one/one.app?source=aloha#/sObject/&quot; &amp; Task_Id__c &amp; &quot;/view&quot;, Task_Name__c, &quot;_parent&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Touchpoint_Type__c</fullName>
        <label>Touchpoint Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_TouchpointType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>DateTime</type>
    </fields>
    <label>Task History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>Status__c</columns>
        <columns>Touchpoint_Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BEL_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>BE - Inside Sales Queue</label>
        <queue>BEL_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_Hot_Leads_Online_Task_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>BE - Hot Leads Online Task Queue</label>
        <queue>BE_Hot_Leads_Online_Task_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_MQL_Task_Record_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>BE - MQL Task Record Queue</label>
        <queue>BE_MQL_Task_Record_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_Online_Master_Date_Request_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>BE - Online Master Date Request Queue</label>
        <queue>BE_Online_Master_Date_Request_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_Outbound_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>BE - Outbound Queue</label>
        <queue>BE_Outbound_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_Telesales_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>BE - Telesales Queue</label>
        <queue>BE_Telesales_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DEU_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DE - Telemarketing Queue</label>
        <queue>DEU_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Auftrag_Professional_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DE - Auftrag - Professional Queue</label>
        <queue>DE_Auftrag_Professional_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Call_List_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DE - Call List Queue</label>
        <queue>DE_Call_List_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Customer_Care_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DE - Customer Care Queue</label>
        <queue>DE_Customer_Care_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Customer_Lifecycle_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DE - Customer Lifecycle Queue</label>
        <queue>DE_Customer_Lifecycle_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Finance_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DE - Finance Queue</label>
        <queue>DE_Finance_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE_Hot_Leads_Online_Task_Queue_Task_History</fullName>
        <filterScope>Queue</filterScope>
        <label>DE - Hot Leads Online Task Queue</label>
        <queue>DE_Hot_Leads_Online_Task_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Task History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>